name:           syb-generics
version:        2.9
Cabal-Version:  >= 1.2
license:        BSD3
maintainer:     libraries@haskell.org
stability:      experimental
flag splitBase
  description: Choose the new smaller, split-up base package.
Library
  exposed-modules:
        Data.Generics2,
        Data.Generics2.Basics,
        Data.Generics2.Instances,
        Data.Generics2.CtxSchemes,
        Data.Generics2.Derive,
        Data.Context
  build-depends: template-haskell, haskell98
  if flag(splitBase)
    build-depends: base >= 3.0, array, containers
  else
    build-depends: base < 3.0
  extensions: OverlappingInstances, UndecidableInstances,
            CPP, TemplateHaskell, ScopedTypeVariables, Rank2Types
  ghc-options: -O
