name:                tabular
version:             0.1
synopsis:            Two-dimensional data tables with rendering functions
description:         Tabular provides a Haskell representation of two-dimensional
                     data tables, the kind that you might find in a spreadsheet or
                     or a research report.  It also comes with some default
                     rendering functions for turning those tables into ASCII art,
                     HTML or LaTeX.
                     .
                     Below is an example of the kind of output this library produces.
                     The tabular package can group rows and columns, each group
                     having one of three separators (no line, single line, double line)
                     between its members.
                     .
                     >     || memtest 1 | memtest 2 ||  time test  | time test 2
                     > ====++===========+===========++=============+============
                     > A 1 ||       hog |  terrible ||        slow |      slower
                     > A 2 ||       pig |   not bad ||        fast |     slowest
                     > ----++-----------+-----------++-------------+------------
                     > B 1 ||      good |     awful || intolerable |    bearable
                     > B 2 ||    better | no chance ||    crawling |     amazing
                     > B 3 ||       meh |   well... ||  worst ever |          ok
category:            Text
license:             BSD3
license-file:        LICENSE
author:              Eric Kow
maintainer:          <E.Y.Kow@brighton.ac.uk>
homepage:            http://code.haskell.org/~kowey/tabular
build-Depends:       base >= 2.1 && < 3.1, mtl >= 1 && < 1.2,
                     html >= 1.0 && < 2.0
build-type:          Simple
ghc-options:
exposed-modules:     Text.Tabular,
                     Text.Tabular.AsciiArt,
                     Text.Tabular.Html,
                     Text.Tabular.Latex
data-files: example/sample1.hs,
            example/sample1.tex
