name: programatica
version: 1.0
Cabal-Version:  >= 1.2
maintainer: Thomas Hallgren <hallgren@cse.ogi.edu>
stability: stable
homepage: http://www.cse.ogi.edu/PacSoft/projects/programatica
copyright: Copyright (c) 2003, OGI School of Science & Engineering, Oregon Health & Science University, All rights reserved.
build-type: Simple
flag splitBase
  description: Choose the new smaller, split-up base package.
Library
 exposed-modules:
  AccList,
  AST4ModSys,
  BaseSyntax,
  BaseSyntaxMaps,
  BaseSyntaxPretty,
  BaseSyntaxStruct,
  BaseSyntaxUtil,
  CheckModules,
  Control_Monad_Fix,
  DefinedNamesBase,
  DefinedNamesBaseStruct,
  DefinedNames,
  DefinedNamesProp,
  DefinedNamesPropStruct,
  DerivingBounded,
  DerivingEnum,
  DerivingEq,
  Deriving,
  DerivingIx,
  DerivingOrd,
  DerivingRead,
  DerivingShow,
  DerivingUtils,
  Ents,
  EnvM,
  FiniteMap,
  FreeNamesBase,
  FreeNamesBaseStruct,
  FreeNames,
  FreeNamesProp,
  FreeNamesPropStruct,
  HasBaseName,
  HasBaseStruct,
  HasPropStruct,
  HsAssoc,
  HsAssocPretty,
  HsAssocStruct,
  HsAssocUtil,
  HsConstants,
  HsDecl,
  HsDeclMaps,
  HsDeclPretty,
  HsDeclStruct,
  HsDeclUtil,
  HsExp,
  HsExpMaps,
  HsExpPretty,
  HsExpStruct,
  HsExpUtil,
  HsFieldsMaps,
  HsFieldsPretty,
  HsFieldsStruct,
  HsGuardsMaps,
  HsGuardsPretty,
  HsGuardsStruct,
  HsGuardsUtil,
  HsIdent,
  HsIdentPretty,
  HsKind,
  HsKindMaps,
  HsKindPretty,
  HsKindStruct,
  HsKindUtil,
  HsLayoutPre,
  HsLexer,
  HsLexerPass1,
  HsLexerPos,
  HsLex,
  HsLexUtils,
  HsLiteral,
  HsLiteralPretty,
  HsModule,
  HsModuleMaps,
  HsModulePretty,
  HsName,
  HsPatMaps,
  HsPatPretty,
  HsPatStruct,
  HsPatUtil,
  HsPropMaps,
  HsPropPretty,
  HsPropStruct,
  HsTokens,
  HsTypeMaps,
  HsTypePretty,
  HsTypeStruct,
  HsTypeUtil,
  IdM,
  IxEnvM,
  IxOutputM,
  IxStateM,
  LexUtil,
  Lift,
  Lists,
  MapDeclMBaseStruct,
  MapDeclM,
  MapDeclMProp,
  MapDeclMPropStruct,
  ModSysAST,
  Modules,
  MT,
  MUtils,
  NameMapsBase,
  NameMapsBaseStruct,
  NameMaps,
  NameMapsProp,
  NameMapsPropStruct,
  NamesEntities,
  Names,
  NewPrettyPrint,
  NewSCC,
  NumberNames,
  OpTypes,
  OrigTiMonad,
  OutputM,
  ParseMonad,
  PNT,
  PosName,
  PPfeInstances,
  PPModules,
  PrettyDoc,
  PrettyEnv,
  PrettyPrint2,
  PrettyPrint,
  PrettyStd,
  PrettySymbols,
  PrettyUtil,
  Products,
  PropLexer,
  PropParser,
  PropParseUtil,
  PropPlogic,
  PropPosSyntax,
  PropSyntax,
  PropSyntaxRec,
  PropSyntaxStruct,
  QualNames,
  ReAssocBase,
  ReAssocBaseStruct,
  ReAssoc,
  ReAssocModule,
  ReAssocProp,
  ReAssocPropStruct,
  Recursive,
  Relations,
  RemoveListComp,
  RemoveListCompProp,
  SCMs,
  ScopeModule,
  ScopeNamesBase,
  ScopeNamesBaseStruct,
  ScopeNames,
  ScopeNamesProp,
  ScopeNamesPropStruct,
  Sets,
  SimpleGraphs,
  SourceNames,
  SpecialNames,
  SrcLoc,
  SrcLocPretty,
  StateM,
  SubstituteBase,
  SubstituteBaseStruct,
  Substitute,
  SubstituteProp,
  SubstitutePropStruct,
  Syntax,
  SyntaxRec,
  SyntaxRecPretty,
  TiBase,
  TiBaseStruct,
  TiBySuper,
  TiClasses,
  TiClassInst2,
  TiClassInst,
  TiConstraints,
  TiContextReduction,
  TiDecorate,
  TiDefault,
  TiDefinedNames,
  TiDerivedInstances,
  TiD,
  TiDinst,
  TiDkc,
  TiDs,
  TiE,
  TiEnvFM,
  TiError,
  TiFields,
  TiFreeNames,
  TiFresh,
  TiFunDeps,
  TiGeneralize,
  TiHsName,
  TI,
  TiInstanceDB,
  TiKEnv,
  TiKinds,
  TiLit,
  TiMonad,
  TiNameMaps,
  TiNames,
  TiP,
  TiPNT,
  TiPrelude,
  TiPretty,
  TiPropDecorate,
  TiProp,
  TiPropInstances,
  TiPropStruct,
  TiRhs,
  TiSCC,
  TiSolve,
  TiTEnv,
  TiT,
  TiTypes,
  TiUtil,
  TokenTags,
  Tree,
  TypedIds,
  Unification,
  UniqueNames,
  WorkModule
 hs-source-dirs:
  base/AST, base/TI, base/parse2, base/parse2/Lexer, base/parse2/Parser,
  base/parse2/LexerGen, base/parse2/LexerSpec, base/tests/HbcLibraries,
  base/pretty, base/syntax, base/lib, base/lib/Monads, base/Modules, base/defs,
  base/transforms, base/transforms/Deriving, property,
  property/syntax, property/AST, property/transforms,
  property/TI, property/defs, property/parse2, property/parse2/Parser
 extensions:
  NoMonomorphismRestriction,
  OverlappingInstances,
  UndecidableInstances,
  FlexibleInstances,
  FlexibleContexts,
  MultiParamTypeClasses,
  FunctionalDependencies,
  TypeSynonymInstances,
  EmptyDataDecls
 ghc-options: -O
 build-depends: haskell98, mtl
 if flag(splitBase)
    build-depends: base >= 3.0, array, containers, pretty
 else
    build-depends: base < 3.0
