[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hets-api"
version = "0.1.0.0"
description = "Python interface for hets (http://hets.eu)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["hets", "heterogeneous specifications"]
license = {text = "GPLv3"}
dependencies = ["hyphen"]
